# pymaxapi

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pymaxapi/: __init__.py  _base.py  base.py  client.py  config.py
src/pymaxapi/models/: __init__.py  bot_command.py  chat.py  message.py  user.py
src/pymaxapi/models/user_children/: bot_info.py  chat_member.py  user_with_photo.py
