[project]
name = "pymaxapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DasKaroWow", email = "daskarowow@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
pymaxapi = "pymaxapi:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
